# solana-program-inspector

./: Cargo.toml  README.md
src/: args.rs  error.rs  main.rs
src/service/: get_deployment_signature.rs  mod.rs
