[package]
name = "solana-program-inspector"
version = "0.1.0"
edition = "2021"
description = "CLI utility, that display additional information about deployed Solana program."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.10.11"
solana-sdk = "1.10.11"
clap = { version = "3.1.15", features = [ "derive" ] }
solana-program = "1.10.11"
thiserror = "1.0.31"